<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".IndexActivity">

    <TextView
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_centerHorizontal="true"
        android:text="@string/index"
        android:textSize="20dp" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/index"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:columnCount="1"
        android:rowCount="4" >
        <Button android:id="@+id/to_easy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/easy"
            />
        <Button
            android:id="@+id/to_normal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/normal"
            />
        <Button
            android:id="@+id/to_hard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hard"
            />
        <Button
            android:id="@+id/to_test"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/test"
            />
        <Button
            android:id="@+id/to_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/to_top"
            />
    </GridLayout>

</RelativeLayout>
